tests/ui/resolve/issue-69401-trait-fn-no-body-ty-local.stderr
error[E0412]: cannot find type `b` in this scope
  --> $DIR/issue-69401-trait-fn-no-body-ty-local.rs:4:53
   |
LL |     fn fn_with_type_named_same_as_local_in_param(b: b);
   |                                                     ^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
